# twenty-four-days2015-of-hackage

./: .gitignore  .travis.yml  LICENSE  README.md  VectorFusionExample.html  pittsburgh-code-and-supply-events.json  stack.yaml  twenty-four-days2015-of-hackage.cabal
app/: MultilineRe.hs  PCREHeavyExampleMain.hs  ShakeExampleMain.hs  WreqExampleMain.hs
generated-src/: MeetupEventsJSON.hs
newer-generated-src/: MeetupEventsJSON.hs
sort-plugins/: OurSorter.hs
src/: DimensionalExample.hs  EarleyExample.hs  GHoodExample.hs  HintExample.hs  HoodExample.hs  IOSpecExample.hs  JSONAutoTypeExample.hs  MonadLoopsExample.hs  MultisetExample.hs  NonEmptyListExample.hs  PCREHeavyExample.hs  SafeExample.hs  ShouldNotTypecheckExample.hs  Sort3.hs  SortWrapper.hs  UnsafeListExample.hs  VectorExample.hs  VectorFusionExample.hs  WreqCodeGolfExample.hs  WreqExample.hs
src/SymbolicDifferentiation/: AlphaOperatorSyntax.hs  AlphaSyntax.hs  AnsiWlPprint.hs  Earley.hs  OperatorSyntax.hs  SExp.hs
test/: DimensionalExampleSpec.hs  EarleyExampleSpec.hs  HereExampleSpec.hs  HintExampleSpec.hs  HypotheticalSemigroupsSpec.hs  HypotheticalSplitSpec.hs  IOSpecExampleSpec.hs  JSONAutoTypeExampleSpec.hs  ListFusionProbeSpec.hs  MissingHExtraExampleSpec.hs  MultisetExampleSpec.hs  PCREHeavyExampleSpec.hs  ShouldNotTypecheckExampleSpec.hs  Sort3Spec.hs  UnsafeListExampleSpec.hs  VectorExampleSpec.hs  WreqExampleSpec.hs
test/SymbolicDifferentiation/: AlphaSyntaxSpec.hs  AnsiWlPprintSpec.hs  EarleySpec.hs  OperatorSyntaxSpec.hs  SExpSpec.hs
