name:                twenty-four-days2015-of-hackage
version:             0.1.0.0
synopsis:            24 Days of Hackage, 2015 edition
description:         24 Days of Hackage, 2015 edition
homepage:            https://github.com/FranklinChen/twenty-four-days2015-of-hackage
license:             BSD3
license-file:        LICENSE
author:              Franklin Chen
maintainer:          franklinchen@franklinchen.com
copyright:           Franklin Chen
category:            Acme
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

executable junk
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4 && <= 5

test-suite spec
  type: exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
                     , app
  ghc-options:         -Wall
  main-is:             Spec.hs
  build-depends:       base >= 4 && <= 5
                     , hspec
                     , QuickCheck

source-repository head
  type:                 git
  location:             https://github.com/FranklinChen/twenty-four-days2015-of-hackage
