name:                twenty-four-days2015-of-hackage
version:             0.1.0.0
synopsis:            24 Days of Hackage, 2015 edition
description:         24 Days of Hackage, 2015 edition
homepage:            https://github.com/FranklinChen/twenty-four-days2015-of-hackage
license:             BSD3
license-file:        LICENSE
author:              Franklin Chen
maintainer:          franklinchen@franklinchen.com
copyright:           Franklin Chen
category:            Acme
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
                     , generated-src
  exposed-modules:     PCREHeavyExample
                     , WreqExample
                     , WreqCodeGolfExample
                     , ShouldNotTypecheckExample
                     , UnsafeListExample
                     , NonEmptyListExample
                     , Sort3
                     , MultisetExample
                     , SymbolicDifferentiation.AlphaSyntax
                     , SymbolicDifferentiation.AlphaOperatorSyntax
                     , SymbolicDifferentiation.OperatorSyntax
                     , SymbolicDifferentiation.SExp
                     , MonadLoopsExample
                     , MeetupEventsJSON
                     , JSONAutoTypeExample
                     , SortWrapper
                     , HintExample
                     , SymbolicDifferentiation.Earley
                     , EarleyExample
                     , IOSpecExample
                     , SafeExample
                     , SymbolicDifferentiation.AnsiWlPprint
                     , VectorExample
                     , VectorFusionExample
                     , DimensionalExample
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , pcre-heavy
                     , wreq
                     , text
                     , lens
                     , aeson
                     , lens-aeson
                     , semigroups
                     , split
                     , multiset
                     , here
                     , interpolate
                     , file-embed
                     , s-cargot
                     , monad-loops
                     , json-autotype
                     , hint
                     , transformers
                     , ListLike
                     , Earley >= 0.10
                     , IOSpec
                     , safe
                     , ansi-wl-pprint
                     , vector >= 0.11
                     , vector-algorithms
                     , list-fusion-probe
                     , dimensional >= 1.0.1.0
                     
executable pcre-heavy-example
  hs-source-dirs:      app
  main-is:             PCREHeavyExampleMain.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4 && <= 5
                     , pcre-heavy

test-suite spec
  type: exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
                     -- Hack? Easiest for rerunning tests in "stack ghci :spec"
                     -- and reloading.
                     , src
                     , generated-src
  ghc-options:         -Wall
  main-is:             Spec.hs
  build-depends:       base >= 4 && <= 5
                     -- Hack? Depending on library does not allow quick reload.
                     --, twenty-four-days2015-of-hackage
                     , hspec
                     , QuickCheck
                     , bytestring
                     , pcre-heavy
                     , wreq
                     , text
                     , lens
                     , aeson
                     , lens-aeson
                     , should-not-typecheck
                     , deepseq
                     , MissingH
                     , extra
                     , semigroups
                     , split
                     , multiset
                     , here
                     , interpolate
                     , file-embed
                     , s-cargot
                     , monad-loops
                     , json-autotype
                     , hint
                     , transformers
                     , ListLike
                     , Earley >= 0.10
                     , IOSpec
                     , safe
                     , ansi-wl-pprint
                     , vector >= 0.11
                     , vector-algorithms
                     , list-fusion-probe
                     , dimensional >= 1.0.1.0

source-repository head
  type:                 git
  location:             https://github.com/FranklinChen/twenty-four-days2015-of-hackage
